# CppHelpers

./: .gitignore  CMakeLists.txt  README.md
file_system/: file_system_helpers.cpp  file_system_helpers.h  sync_process.cpp  sync_process.h
logging/: logging.cpp  logging.h  termcolor.h
result/: result.h
safe_types/: safe_vector.h  test_and_set.h
string/: string_helpers.cpp  string_helpers.h
